Fixing Sonar Lint found mistakes